# Framed

./: .gitignore  README.md
assets/: _default.glsl  color.frag  imgui.ini  settings.json
proj/cmake/: CMakeLists.txt  CMakeSettings.json
src/: CRTEventHandler.h  FramedApp.cpp  enum.h
src/Helpers/: BrushManager.cpp  BrushManager.hpp  Frame.cpp  Frame.h  FrameManager.cpp  FrameManager.h  GlobalSettings.cpp  GlobalSettings.h  LineManager.cpp  LineManager.h  NetworkManager.cpp  NetworkManager.h  OverlayManager.cpp  OverlayManager.h  TemplateManager.cpp  TemplateManager.h
src/Pen/OSX/: ofxTablet.h  tabletCocoa.mm
src/Pen/Windows/: CRTEventHandler.h
src/UI/: ColorPicker.cpp  ColorPicker.h  ColorSlider.cpp  ColorSlider.h  ScrollBox.cpp  ScrollBox.h  Slider.cpp  Slider.h  TouchButton.cpp  TouchButton.h  TouchUI.cpp  TouchUI.h
src/VO/: PointsPackage.cpp  PointsPackage.h
